--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Hello World!</title>
-    </style>
+    <style>
             #img {
                     border-radius: 50%;
                     cursor: pointer;
@@ -13,8 +13,8 @@
                     margin-top: -150px;
                     margin-left: -150px;
                  }
-    <style>
-    </script language='JavaScript'>
+    </style>
+    <script language='JavaScript'>
              var rotateVal = 0
              var InterVal = 0
              window.onload = function() {
@@ -34,7 +34,7 @@
                              ing.style.transform = '0.1s lineae'
                      },100)
              }
-    <script>
+    </script>
   </head>
   <body>
     <h1>Welcome to my first Web Page</h1>
