--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hello World!</title>
+    <title>Plusky</title>
     <style>
-            #img {
+            #img_rotate {
                     border-radius: 50%;
                     cursor: pointer;
                     position: absolute;
@@ -12,23 +12,23 @@
                     left: 50%;
                     margin-top: -150px;
                     margin-left: -150px;
-                 }
+            }
     </style>
-    <script language='JavaScript'>
+    <script>
              var rotateVal = 0
              var InterVal = 0
              window.onload = function() {
                      rotate()
-                     document.getElementById('img').onmousemove = function() {
+                     document.getElementById('img_rotate').onmousemove = function() {
                              clearInterVal(InterVal)
                      }
-                     document.getElementById('img').onmousemove = function() {
+                     document.getElementById('img_rotate').onmousemove = function() {
                              rotate()
                      }
              }
              function rotate() {
                      InterVal = setInterVal(function() {
-                             var img = document.getElementById('img')
+                             var img = document.getElementById('img_rotate')
                              rotateVal += 1
                              img.style.transform = 'rotate(' + rotateVal + 'deg)'
                              ing.style.transform = '0.1s lineae'
@@ -38,5 +38,7 @@
   </head>
   <body>
     <h1>Welcome to my first Web Page</h1>
+    <p1> HCPJ-lab ©️ 2020 Plusky Inc.</p1>
+    <p2> All rights reserved </p2>
   </body>
 </html>
