--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ a img{ border:none}
  
 <body>
 <div id="rotate" style=" cursor:pointer; position:absolute; left:100px; top:100px">
-<a href="https://lollypop-net.github.io/"><img src="https://icweiliimg1.pstatp.com/weili/bl/492758084694573223.jpg" /></a><img src="https://icweiliimg1.pstatp.com/weili/bl/492758084694573223.jpg" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+<a href="https://lollypop-net.github.io/"><img src="https://icweiliimg1.pstatp.com/weili/bl/492758084694573223.jpg" width="100px" height="100px" border="0" alt="" style="border:none !important; margin:0px !important;"/></a>
  
 </div>
 <script>
