--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a id="tap" herf="#" data-role="button">触摸我会触发事件</a>
 		<p class="content"></p>
 	</div>
-	<div data-role="fotter">
+	<div data-role="footer">
 		<h1>PaperChat Inc.</h1>
 	</div>
 </div>
