--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charSet="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.8.0/jquery-1.8.0.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery-mobile/1.4.5/jquery.mobile.min.js"></script>
-<link rel="stylesheet" herf="https://cdn.bootcdn.net/ajax/libs/jquery-mobile/1.4.5/jquery.mobile.min.css">
-<style type="text/css">
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<script src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
-<div data-role="page">
-	<div data-role="header">
-		<h1>页面头部</h1>
-	</div>
-	<div data-role="main">
-		<a id="tap" herf="#" data-role="button">触摸我会触发事件</a>
-		<p class="content"></p>
-	</div>
-	<div data-role="footer">
-		<h1>PaperChat Inc.</h1>
-	</div>
+
+<div data-role="page" id="pageone">
+  <div data-role="header">
+    <h1>页面标题</h1>
+  </div>
+
+  <div data-role="content">
+    <p>页面内容</p>
+  </div>
+
+  <div data-role="footer">
+    <h1>页面底部内容</h1>
+  </div>
 </div>
-<script>
-$("#tap").on("tap",function(){
-	$(".content").html("Welcome to Paperchat!")
-})
-</script>
+
 </body>
 </html>
