--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
 
   <div data-role="content">
     <p>页面内容</p>
+    <a id="tick" herf="#" data-role="button">touch me!</a>
+    <p class="show"></p>
   </div>
 
   <div data-role="footer">
     <h1>©PaperChat Inc.</h1>
   </div>
 </div>
-
+<script>
+$("#tick").on("tick",function(){
+	$(".show").html("Welcome to Paperchat!")
+})
+</script>
 </body>
 </html>
