--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script>
 $("#tap").on("tap",function(){
 	$(".content").html("Welcome to Paperchat!")
+	$(e.target).addClass('ui-btn-b');
 })
 </script>
 </body>
