--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 <script>
-$("#tap").on("tap",function(){
+$("#tap").on("tap",function(e){
 	$(".content").html("Welcome to Paperchat!")
 	$(e.target).addClass('ui-btn-b');
 })
