--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 
   <div data-role="footer">
-    <h1>©PaperChat Community,Inc.</h1>
+    <h1>©2020 PaperChat Community,Inc.</h1>
   </div>
 </div>
 <script>
