--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div data-role="page" id="pageone">
   <div data-role="header">
-    <h1>页面标题</h1>
+    <h1>PaperChat</h1>
   </div>
 
   <div data-role="content">
