--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" data-role="button">subtract</a>
+    <a id="tap" herf="#" data-role="button">subscribe</a>
     <p class="content"></p>
   </div>
 
