--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <script>
 $("#tap").on("tap",function(e){
-	$(".content").html("Welcome to Paperchat!")
+	alert("subscribe sceccess!")
 	$(e.target).addClass('ui-btn-b');
 })
 </script>
