--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" data-role="button">Subscribe</a>
+    <a id="tap" herf="#" data-icon="flat-mail" data-role="button">Subscribe</a>
   </div>
 
   <div data-role="footer">
