--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" data-icon="flat-mail" data-role="button">Subscribe</a>
+    <a id="tap" herf="#" data-icon="flat-new" data-iconpos="bottom" data-role="button">Subscribe</a>
   </div>
 
   <div data-role="footer">
@@ -23,7 +23,7 @@
 </div>
 <script>
 $("#tap").on("taphold",function(e){
-	$(e.target).addClass('ui-btn-b');
+	$(e.target).addClass('ui-btn-d');
 	alert("subscribe sceccess!")
 })
 </script>
