--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" data-icon="plus" data-role="button">Subscribe</a>
+    <a id="tap" herf="#" class="ui-btn ui-btn-inline ui-icon-plus ui-btn-icon-left ui-corner-all ui-shadow ui-nodisc-icon ui-alt-icon" data-role="button">Subscribe</a>
   </div>
 
   <div data-role="footer">
