--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
-
+<style>
+	#btn-subscribe ui-icon{background:url("https://stock.tuchong.com/image?imageId=479006673154605085&source=360tusou") no-repeat 0 50%;background-size:300px 60px;}
+</style>
 <div data-role="page" id="pageone">
   <div data-role="header">
     <h1>PaperChat</h1>
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" class="ui-btn ui-btn-inline ui-icon-plus ui-btn-icon-left ui-corner-all ui-shadow ui-alt-icon" data-role="button">Subscribe</a>
+    <a id="tap" herf="#" class="ui-btn ui-btn-inline ui-icon-plus ui-btn-icon-left ui-corner-all ui-shadow ui-nodisc-icon ui-alt-icon" data-role="button">Subscribe</a>
   </div>
 
   <div data-role="footer">
