--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <style>
-	#btn-subscribe ui-icon{background:url(../btn-subscirbe.png) no-repeat 0 50%;background-size:300px 60px;}
+	#btn-subscribe ui-icon{background:url(../btn-subscirbe.png) no-repeat 0 50%;background-size:50px 50px;}
 </style>
 <div data-role="page" id="pageone">
   <div data-role="header">
@@ -16,7 +16,7 @@
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" class="ui-btn ui-btn-inline ui-icon-plus ui-btn-icon-left ui-corner-all ui-shadow ui-nodisc-icon ui-alt-icon" data-role="button">Subscribe</a>
+    <a id="tap btn-subscribe" herf="#" data-icon="custom" data-role="button">Subscribe</a>
   </div>
 
   <div data-role="footer">
