--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 	}
 	@keyframes mymove{
 		0%    {background: orange;transform: rotate(30deg) scale(4);}
-		25%  {background: yellow;transform: rotate(-30deg) scale(1.5);}
+		25%  {background: Aquamarine;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
 		100%{background: orange;transform: rotate(30deg) scale(4);}
 	}
 	@-webkit-keyframes mymove{
 		0%    {background: orange;transform: rotate(30deg) scale(4);}
-		25%  {background: yellow;transform: rotate(-30deg) scale(1.5);}
+		25%  {background: Aquamarine;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
 		100%{background: orange;transform: rotate(30deg) scale(4);}
 	}	
 	@-moz-keyframes mymove{
 		0%    {background: orange;transform: rotate(30deg) scale(4);}
-		25%  {background: yellow;transform: rotate(-30deg) scale(1.5);}
+		25%  {background: Aquamarine;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
 		100%{background: orange;transform: rotate(30deg) scale(4);}
 	}
 	@-o-keyframes mymove{
 		0%    {background: orange;transform: rotate(30deg) scale(4);}
-		25%  {background: yellow;transform: rotate(-30deg) scale(1.5);}
+		25%  {background: Aquamarine;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
 		100%{background: orange;transform: rotate(30deg) scale(4);}
