--- a/index.html
+++ b/index.html
@@ -42,32 +42,32 @@
 		-o-animation-iteration-count:infinite;
 	}
 	@keyframes mymove{
-		0%    {background: orange;transform: rotate(30deg) scale(4);}
+		0%    {background: Salmon;transform: rotate(30deg) scale(4);}
 		25%  {background: DarkMagenta;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: orange;transform: rotate(30deg) scale(4);}
+		100%{background: Salmon;transform: rotate(30deg) scale(4);}
 	}
 	@-webkit-keyframes mymove{
-		0%    {background: orange;transform: rotate(30deg) scale(4);}
+		0%    {background: Salmon;transform: rotate(30deg) scale(4);}
 		25%  {background: DarkMagenta;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: orange;transform: rotate(30deg) scale(4);}
+		100%{background: Salmon;transform: rotate(30deg) scale(4);}
 	}	
 	@-moz-keyframes mymove{
-		0%    {background: orange;transform: rotate(30deg) scale(4);}
+		0%    {background: Salmon;transform: rotate(30deg) scale(4);}
 		25%  {background: DarkMagenta;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: orange;transform: rotate(30deg) scale(4);}
+		100%{background: Salmon;transform: rotate(30deg) scale(4);}
 	}
 	@-o-keyframes mymove{
 		0%    {background: orange;transform: rotate(30deg) scale(4);}
 		25%  {background: DarkMagenta;transform: rotate(-30deg) scale(1.5);}
 		50%  {background: pink;transform: rotate(30deg) scale(3);}
 		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: orange;transform: rotate(30deg) scale(4);}
+		100%{background: Salmon;transform: rotate(30deg) scale(4);}
 	}
 </style>
 <div data-role="page" id="pageone">
