--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		background:brown;
 		position:relative;
 		margin:0 auto;
-		margin-top: 200px;
+		margin-bottom: 200px;
 
     		border-radius: 30px;
     		-moz-border-radius: 30px;
