--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		background:brown;
 		position:relative;
 		margin:0 auto;
-		margin-bottom: 50px;
+		margin-top:75px;
+		margin-bottom: 25px;
 
     		border-radius: 30px;
     		-moz-border-radius: 30px;
