--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		background:brown;
 		position:relative;
 		margin:0 auto;
-		margin-top:75px;
-		margin-bottom: 25px;
+		margin-top:100px
+		margin-bottom: 0px;
 
     		border-radius: 30px;
     		-moz-border-radius: 30px;
