--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		background:brown;
 		position:relative;
 		margin:0 auto;
-		margin-top:100px
+		margin-top:100px;
 		margin-bottom: 0px;
 
     		border-radius: 30px;
