--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		position:relative;
 		margin:0 auto;
 		margin-top:200px;
-		margin-bottom: -50px;
 
     		border-radius: 30px;
     		-moz-border-radius: 30px;
@@ -77,7 +76,11 @@
   </div>
 
   <div data-role="content">
-    <a id="tap" herf="#" data-role="button">Subscribe</a>
+    <div>
+	    <a id="tap" herf="#" data-role="button">
+		    <img src="https://image.freepik.com/free-vector/subscribe_23-2148020923.jpg" width="100px" height="100px"/>
+	    </a>
+    </div>
   </div>
 
   <div data-role="footer">
