--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div data-role="content">
     <div>
 	    <a id="tap" herf="#" data-role="button">
-		    <img src="https://image.freepik.com/free-vector/subscribe_23-2148020923.jpg" width="100px" height="100px"/>
+		    <img src="https://image.freepik.com/free-vector/subscribe_23-2148020923.jpg" class="routate" width="100px" height="100px"/>
 	    </a>
     </div>
   </div>
