--- a/index.html
+++ b/index.html
@@ -8,67 +8,6 @@
 </head>
 <body>
 <style>
-		.routate{
-		width: 100px;
-		height:100px;
-		background:brown;
-		position:relative;
-		margin:0 auto;
-		margin-top:200px;
-
-    		border-radius: 30px;
-    		-moz-border-radius: 30px;
-    		-webkit-border-radius: 30px;
-   	 	-o-border-radius: 30px;
-
-		animation-name:mymove;
-		-moz-animation-name:mymove;
-		-webkit-animation-name:mymove;
-		-o-animation-name:mymove;
-
-		animation-duration:10s;
-		-moz-animation-duration:10s;
-		-webkit-animation-duration:10s;
-		-o-animation-duration:10s;
-
-		animation-time-function:ease-in-out;
-		-moz-animation-time-function:ease-in-out;
-		-webkit-animation-time-function:ease-in-out;
-		-o-animation-time-function:ease-in-out;
-
-		animation-iteration-count:infinite;
-		-moz-animation-iteration-count:infinite;
-		-webkit-animation-iteration-count:infinite;
-		-o-animation-iteration-count:infinite;
-	}
-	@keyframes mymove{
-		0%    {background: Salmon;transform: rotate(30deg) scale(4);}
-		25%  {background: Orchid;transform: rotate(-30deg) scale(1.5);}
-		50%  {background: pink;transform: rotate(30deg) scale(3);}
-		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: Salmon;transform: rotate(30deg) scale(4);}
-	}
-	@-webkit-keyframes mymove{
-		0%    {background: Salmon;transform: rotate(30deg) scale(4);}
-		25%  {background: Orchid;transform: rotate(-30deg) scale(1.5);}
-		50%  {background: pink;transform: rotate(30deg) scale(3);}
-		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: Salmon;transform: rotate(30deg) scale(4);}
-	}	
-	@-moz-keyframes mymove{
-		0%    {background: Salmon;transform: rotate(30deg) scale(4);}
-		25%  {background: Orchid;transform: rotate(-30deg) scale(1.5);}
-		50%  {background: pink;transform: rotate(30deg) scale(3);}
-		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: Salmon;transform: rotate(30deg) scale(4);}
-	}
-	@-o-keyframes mymove{
-		0%    {background: orange;transform: rotate(30deg) scale(4);}
-		25%  {background: Orchid;transform: rotate(-30deg) scale(1.5);}
-		50%  {background: pink;transform: rotate(30deg) scale(3);}
-		75%  {background: skyblue;transform: rotate(-30deg) scale(2);}
-		100%{background: Salmon;transform: rotate(30deg) scale(4);}
-	}
 </style>
 <div data-role="page" id="pageone">
   <div data-role="header">
@@ -76,11 +15,16 @@
   </div>
 
   <div data-role="content">
-    <div>
-	    <a id="tap" herf="#" data-role="button">
-		    <img src="https://image.freepik.com/free-vector/subscribe_23-2148020923.jpg" class="routate" width="100px" height="100px"/>
-	    </a>
-    </div>
+    <ul data-role="listview">
+	    <li id="list-slide">
+		    <a herf="#links">program1</a>
+	    </li>
+	    <li id="list-slide">
+		    <a herf="#links">program2</a>
+	    </li>
+	    <li id="list-slide">
+		    <a herf="#links">program2</a>
+	    </li>
   </div>
 
   <div data-role="footer">
@@ -91,6 +35,8 @@
 $("#tap").on("taphold",function(e){
 	$(e.target).addClass('routate');
 	alert("subscribe sceccess!")
+$("#list-slide").on("swipe",function(e){
+	$("#list-slide").css("background","blue");
 })
 </script>
 </body>
