--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $("#tap").on("taphold",function(e){
 	$(e.target).addClass('routate');
 	alert("subscribe sceccess!")
 $("#list-slide").on("swipe",function(e){
-	$("#list-slide").css("background","skyblue");
+	$("[data-role='page']").css("background","blue");
 })
 </script>
 </body>
